# c2rust-test

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PUBLISHING.md  README.md
.github/workflows/: publish.yml
src/: config_helper.rs  error.rs  executor.rs  git_helper.rs  main.rs
tests/: integration_test.rs
