[package]
name = "c2rust-test"
version = "0.1.0"
edition = "2021"
authors = ["LuuuXXX <40876036+LuuuXXX@users.noreply.github.com>"]
description = "A command-line tool for executing C project tests in the c2rust workflow"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LuuuXXX/c2rust-test"
readme = "README.md"
keywords = ["c2rust", "testing", "build-tools", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "c2rust-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serial_test = "3"
